index.pug changes

--- a/views/index.pug
+++ b/views/index.pug
@@ -12,12 +12,10 @@ block content
         li When I visit that shortened URL, it will redirect me to my original link.
     .w3-card-4
       h4 Example creation usage :
-      code example.com
-      br
-      code example.com
+      code http://url-shorten-atrinh567.herokuapp.com/https://www.google.com
     .w3-card-4
       h4 Example creation output :
-      code { random }
+      code { original_url: "http://www.google.com", short_url: "B17_5gu5" }
     .w3-card-4
       h4 You can use your new shorter link immediately! It will automatically redirect you.
-      code example.com
+      code http://url-shorten-atrinh567.herokuapp.com/B17_5gu5
