index.pug changes

--- a/views/index.pug
+++ b/views/index.pug
@@ -19,3 +19,5 @@ block content
     .w3-card-4
       h4 You can use your new shorter link immediately! It will automatically redirect you.
       code http://url-shorten-atrinh567.herokuapp.com/B17_5gu5
+    
+    h6 &copy; 2016 Anthony Trinh
